--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.8.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "date-fns": "^4.1.0",
+    "element-plus": "^2.9.5",
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +23,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^9.33.0"
   },
   "eslintConfig": {
     "root": true,
